# shelter

./: LICENSE  README.md
.github/workflows/: say-hi.yml
backend/: pyproject.toml
frontend/: package-lock.json  package.json
frontend/data/: create.py  dogs.json
frontend/src/: App.vue
frontend/src/components/foundation/: Footer.vue  Header.vue  NavBar.vue
frontend/src/components/home/: HelloWorld.vue  List.vue  Thumbnail.vue
frontend/src/components/profile/: Detail.vue  Image.vue
frontend/src/router/: index.js
frontend/src/views/: Home.vue  Profile.vue  User.vue
