[tool.poetry]
name = "shelter-backend"
version = "0.1.0"
description = ""
authors = ["Justin <jerwei.yeoh@exwzd.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"

[tool.poetry.dev-dependencies]
uvicorn = "^0.14.0"
black = "^21.6b0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
